--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask_Migrate==3.1.0
-Flask_SQLAlchemy==2.5.1
 alembic==1.7.1
-SQLAlchemy==1.4.23
+Flask_SQLAlchemy==2.5.1
 Flask==2.0.1
+SQLAlchemy==1.4.23
+WTForms==2.3.3
+Flask_WTF==0.15.1
+Flask_Migrate==3.1.0
