--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,flask,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,flask,linux
 
+### Pycharm ###
+.idea
+
 ### Flask ###
 instance/*
 !instance/.gitignore
